# ruslqite-ic-crud

./: Cargo.toml  candid.did  dfx.json  run.sh
src/: api.rs  lib.rs  main.rs  mem.rs  types.rs
