[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.15"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-types = "0.4.0"
rusqlite = { git = "https://github.com/Kirsky0/rusqlite", features = ["bundled"], branch = "env" }
once_cell = "1.13.0"
serde_json = "1.0.85"
serde = "1.0.144"
